# cmake-conan-maccatalyst-test

./: CMakeLists.txt  Makefile  README.md  conanfile.py  requirements.txt
.github/workflows/: catalyst-conan.yml  catalyst-toolchain.yml  ios-conan.yml  ios-toolchain.yml
src/: lib.cpp  lib.hpp  lib.swift
